# Tracking

./: CMakeLists.txt  README.md  run.sh
cmake/: FindCaffe.cmake  FindCaffe.cmake~
src/: bounding_box.cpp  bounding_box.h  headall.h  helper.cpp  helper.h  high_res_timer.cpp  high_res_timer.h  image_proc.h  main.cpp  regressor.cpp  regressor.h  regressor_base.h  tracker.cpp  tracker.h  tracker_manager.h
